WIP: setting up initial table

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -8,6 +8,7 @@ $line-height-base: 1.6;
 
 // Colors
 $green: #00A154;
+$yellow: #f0820b;
 
 $blue: #3490dc;
 $indigo: #6574cd;
@@ -15,6 +16,5 @@ $purple: #9561e2;
 $pink: #f66d9b;
 $red: #e3342f;
 $orange: #f6993f;
-$yellow: #ffed4a;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
