chore: subscriber form up and working

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -12,3 +12,9 @@
     color: $green;
     font-weight: 700;
 }
+
+.form-group > label {
+    font-size: .7rem;
+    color: gray;
+    margin-bottom: 0;
+}
