--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -4,10 +4,17 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
-
-.title {
-    color: $green;
-    font-weight: 700;
+header {
+    background-color: $green;
+    img {
+        height: 20px;
+        margin-right: 10px;
+    }
+    h1 {
+        color: white;
+        font-size: 15px;
+        font-weight: bold;
+    }
 }
 
 .form-group > label {
